##########################################################################
# If not stated otherwise in this file or this component's Licenses.txt
# file the following copyright and licenses apply:
#
# Copyright 2016 RDK Management
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
##########################################################################

SUBDIRS = 
noinst_LTLIBRARIES = libjsonobj.la
libjsonobj_la_CFLAGS= $(NETSNMP_CFLAGS)
libjsonobj_la_LDFLAGS= $(NETSNMP_LDFLAGS)
libjsonobj_la_SOURCES= arraylist.c debug.c json_object.c json_tokener.c json_util.c linkhash.c printbuf.c
